syntax = "proto3";
import "common.proto";

message Container {
    string containerId = 1;
    string name = 2;
    string domain = 3;
    string status = 4;
    string projectId = 5;
    int32 nodePort = 6;
    string createdAt = 7;
    string updatedAt = 8;
}

message ContainerResponse {
    int32 code = 1;
    string message = 2;
    Container res = 3;
}

message IGetContainerRequest {
    string domain = 1;
}

message IGetContainerCredsRequest {
    string jwt = 1;
}

message ContainerCredsResponse {
    int32 code = 1;
    string message = 2;
    repeated EnviornmentVariablesKeyValue res = 3;
}



service OrchestratorService {
    rpc IGetContainer (IGetContainerRequest) returns (ContainerResponse);
    rpc IGetBuildContainerCreds (IGetContainerCredsRequest) returns (ContainerCredsResponse);
    rpc IGetProdContainerCreds (IGetContainerCredsRequest) returns (ContainerCredsResponse);
}

